added management for notify settings profile, user register and credentials