@@ -61,8 +61,15 @@ import utm.md.web.rest.errors.LoginAlreadyUsedException;
 @RequestMapping("/api/admin")
 public class UserResource {
 
-    private static final List<String> ALLOWED_ORDERED_PROPERTIES = Collections.unmodifiableList(
-        Arrays.asList("id", "login", "firstName", "lastName", "createdBy", "createdDate", "lastModifiedBy", "lastModifiedDate")
+    private static final List<String> ALLOWED_ORDERED_PROPERTIES = List.of(
+        "id",
+        "login",
+        "firstName",
+        "lastName",
+        "createdBy",
+        "createdDate",
+        "lastModifiedBy",
+        "lastModifiedDate"
     );
 
     private final Logger log = LoggerFactory.getLogger(UserResource.class);
